--- a/banma/vue-banma/src/common/stylus/variable.styl
+++ b/banma/vue-banma/src/common/stylus/variable.styl
@@ -10,6 +10,7 @@ $color-text = #000
 $color-text-d = rgba(255, 255, 255, 0.3)
 $color-text-l = #000
 $color-text-ll = rgba(255, 255, 255, 0.8)
+$color-text-link=#3194d0
 
 //字体定义规范
 $font-size-small-s = 10px
