--- a/banma/vue-banma/src/common/stylus/index.styl
+++ b/banma/vue-banma/src/common/stylus/index.styl
@@ -1,3 +1,82 @@
 @import "./reset.styl"
 @import "./base.styl"
+@import "./variable.styl"
+@import "./mixin.styl"
 // @import "./icon.styl"
+.A_link
+    color :$color-text-link;
+
+.sprite
+    display: inline-block;
+    vertical-align: top;
+    background-image: url(/static/testing/sprite.svg);
+    background-size: 3em auto;
+    width: 1em;
+    height: 1em;
+    background-position: -1em -1em;
+    margin-top: 5px;
+
+.banma-main
+    position: fixed
+    width: 100%
+    top: 44px
+    bottom: 0
+    .main-content
+        height: 100%
+        overflow: hidden
+        .main-wrapper
+            padding:0 18px
+            .partItem
+                padding-bottom:5px;
+                border-1px(#ccc)
+
+.user-header-row
+    margin:10px 0;
+    line-height :40px;
+    height :40px;
+    .avatar
+        display :inline-block;
+        width :30px;
+        height :30px;
+        vertical-align :top;
+        margin-top: 5px;
+        img
+            border-radius:50%;
+    .content
+        display :inline-block;
+        margin-left :10px;
+
+.picture-wrapper
+    .topic
+        line-height :20px;
+        margin :10px 0;
+    .swiper-container
+        width:100%;
+        height:80px;
+        margin-bottom: 5px;
+        .swiper-slide
+            img
+                width:100%;
+                height 100%;
+/* 左右布局*/
+.hour-like-comment
+    margin:10px 0;
+    position :relative;
+    .right-wrapper
+        position :absolute;
+        right:10px;
+        top:0px;
+
+/*3等分布局*/
+.forward-like-comment
+    display: flex;
+    margin:10px 0;
+    .forward
+        flex: 1;
+    .like
+        flex: 1;
+        text-align: center;
+    .comment
+        flex: 1;
+        text-align: right ;
+        margin-right:5px;
